# django_user_interaction_log

./: .coverage  .coveragerc  .coveralls.yml  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  db.sqlite3  manage.py  mkdocs.yml  requirements.txt  runtests.py  setup.cfg  tox.ini
django_event_logger/: admin.py  apps.py  asgi.py  configs.py  examples.py  models.py  settings.py  urls.py  wsgi.py
django_user_interaction_log/: admin.py  apps.py  configs.py  examples.py  mixins.py  models.py  scripts.py  urls.py
docs/: detail.md  index.md
event_logger/: admin.py  apps.py  configs.py  middlewares.py  mixins.py  models.py  registrars.py  requests.py  scripts.py  urls.py  views.py
htmlcov/: event_logger___init___py.html  event_logger_admin_py.html  event_logger_apps_py.html  event_logger_configs_py.html  event_logger_examples_py.html  event_logger_migrations_0001_initial_py.html  event_logger_migrations_0002_auto_20200726_2027_py.html  event_logger_migrations_0003_auto_20200726_2100_py.html  event_logger_migrations_0004_auto_20200727_2005_py.html  event_logger_migrations_0005_auto_20200728_2029_py.html  event_logger_migrations_0006_auto_20200731_0952_py.html  event_logger_migrations_0007_auto_20200731_0954_py.html  event_logger_migrations___init___py.html  event_logger_mixins_py.html  event_logger_models_py.html  event_logger_registrars_py.html  event_logger_scripts_py.html  event_logger_templates___init___py.html  event_logger_templatetags___init___py.html  event_logger_templatetags_model_objects_info_py.html  event_logger_tests___init___py.html  event_logger_tests_test_configs_methods_py.html  event_logger_tests_test_log_records_model_py.html  event_logger_tests_test_registrars_functions_py.html  event_logger_tests_test_scripts_functions_py.html  event_logger_tests_test_template_tags_py.html  event_logger_tests_test_views_and_examples_py.html  event_logger_urls_py.html  event_logger_views_py.html  index.html  status.json
(+38 files in other folders)
